--- a/.github/workflows/fudge-runtime-build-deployment.yml
+++ b/.github/workflows/fudge-runtime-build-deployment.yml
@@ -5,9 +5,13 @@ on:
     types:
       - published
 
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: windows-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -64,3 +68,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: fudge.zip
+          token: ${{ secrets.GITHUB_TOKEN }}
