remove .tsbuildinfo files on release

--- a/.github/workflows/fudge-runtime-build-deployment.yml
+++ b/.github/workflows/fudge-runtime-build-deployment.yml
@@ -22,6 +22,10 @@ jobs:
       - name: Compile code
         run: cmd /c CompileAll.bat
 
+      - name: Remove .tsbuildinfo files 
+        run: |
+          find Distribution/ -name "*.tsbuildinfo" -type f -delete
+
       - name: Bundle files
         run: |
           mkdir -p FUDGE_Runtime/Editor/Build
