update build action

--- a/.github/workflows/fudge-runtime-build-deployment.yml
+++ b/.github/workflows/fudge-runtime-build-deployment.yml
@@ -20,9 +20,11 @@ jobs:
         run: npm install
 
       - name: Compile code
-        run: cmd /c CompileAll.bat
+        shell: cmd
+        run: CompileAll.bat
 
       - name: Remove .tsbuildinfo files 
+        shell: cmd
         run: |
           del /S /Q Distribution\*.tsbuildinfo
 
