compile editor in compile all, remove all *.tsbuildinfo in build action

--- a/.github/workflows/fudge-runtime-build-deployment.yml
+++ b/.github/workflows/fudge-runtime-build-deployment.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Remove .tsbuildinfo files 
         shell: cmd
         run: |
-          del /S /Q Distribution\*.tsbuildinfo
+          del /s /q *.tsbuildinfo
 
       - name: Bundle files
         run: |
