replace old "jirka..." urls with "hs-furtwangen"

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JirkaDellOro/FUDGE.git"
+    "url": "git+https://github.com/hs-furtwangen/FUDGE.git"
   },
   "keywords": [
     "FUDGE"
@@ -17,9 +17,9 @@
   "author": "Jirka Dell'Oro-Friedl",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JirkaDellOro/FUDGE/issues"
+    "url": "https://github.com/hs-furtwangen/FUDGE/issues"
   },
-  "homepage": "https://github.com/JirkaDellOro/FUDGE#readme",
+  "homepage": "https://github.com/hs-furtwangen/FUDGE#readme",
   "dependencies": {
     "@electron/remote": "^2.1.2",
     "@types/node": "^20.12.8",
