use tsconfig project references instead of /// paths

--- a/Source/Net/tsconfig.typedoc.json
+++ b/Source/Net/tsconfig.typedoc.json
@@ -6,6 +6,11 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
+  "references": [
+    {
+      "path": "../../Source/Core"
+    }
+  ],
   "typedocOptions": {
     "entryPoints": [
       "."
