--- a/Editor/Source/Fudge/tsconfig.json
+++ b/Editor/Source/Fudge/tsconfig.json
@@ -10,16 +10,29 @@
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
-    "sourceMap": true, /* Generates corresponding '.map' file. */
+    // "sourceMap": true, /* Generates corresponding '.map' file. */
     "outFile": "../../Build/Fudge/Fudge.js", /* Concatenate and emit output to single file. */
     //"outDir": "../../Build",                /* Redirect output structure to the directory. */
     // "sourceRoot": "./",
     //"rootDir": ".",                         /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "inlineSourceMap": true,               /* Emit a single file with source maps instead of having a separate file. */
+    "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
     "composite": true, /* Enable project compilation */
     "types": [
       "electron",
       "node",
       "../../GoldenLayout/golden-layout" 
-    ]
+    ],
   },
+  "references": [
+    {
+      "path": "../../../Source/Core"
+    },
+    {
+      "path": "../../../Source/Aid"
+    },
+    {
+      "path": "../../../Source/UserInterface"
+    }
+  ]
 }
