--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "ws": "^8.17.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "@stylistic/eslint-plugin-ts": "^2.8.0",
+    "eslint": "^9.11.1",
     "typedoc": "^0.25.13",
     "typedoc-plugin-merge-modules": "^5.1.0",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.8.0"
+    "typescript-eslint": "^8.8.0"
   }
 }
