--- a/Source/Core/tsconfig.json
+++ b/Source/Core/tsconfig.json
@@ -48,12 +48,14 @@
     /* -------------------- Source Map Options */
     // "sourceRoot": "",                      /* Specify the location where debugger should locate TypeScript files instead of source locations. */
     // "mapRoot": "",                         /* Specify the location where debugger should locate map files instead of generated locations. */
-     "inlineSourceMap": true,               /* Emit a single file with source maps instead of having a separate file. */
-     "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
+    "inlineSourceMap": true, /* Emit a single file with source maps instead of having a separate file. */
+    "inlineSources": true, /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
     /* -------------------- Experimental Options */
     "skipLibCheck": true, // TODO: check this. Became necessary on one computer because WebgGL in lib.dom.d.ts was not correctly implemented
     "useDefineForClassFields": false,
-    "stripInternal": true,                /* Disable emitting declarations that have '@internal' in their JSDoc comments. */
+    "stripInternal": true, /* Disable emitting declarations that have '@internal' in their JSDoc comments. */
   },
-  "exclude": ["./Shader/Shaders"]
+  "exclude": [
+    "./Shader/Shaders"
+  ]
 }
